# QDynamics

./: .gitignore  CMakeLists.txt  DefaultAnimation.qml  LICENSE  LoaderWindow.qml  dimensions.cpp  dimensions.h
